@@ -77,6 +77,7 @@
 - OpenCL Device: Do a check on available constant memory size and abort if it's less than 64kB
 - File Reads: Improved error detection on file reads, especially when getting the file stats
 - File Locking: Improved error detection on file locks
+- Hash Parsing: Added additional bound checks for the SIP digest authentication (MD5) parser (-m 11400)
 - Sessions: Move out handling of multiple instance from restore file into separate pidfile
 - Threads: Restored strerror as %m is unsupported by the BSDs
 - Wordlists: Fixed memory leak in case access a file in a wordlist folder fails
